fixed candle dipper rendering crash when the last item is added fixed sage burning plate stopping spawns properly now added baba yaga hut structure

--- a/src/main/resources/assets/hexerei/lang/en_us.json
+++ b/src/main/resources/assets/hexerei/lang/en_us.json
@@ -478,7 +478,7 @@
   "book.hexerei.items_mixing_cauldron_7.passage_1": "  The mixing cauldron can brew up to two buckets worth of potions at a time, when heated.\n  To do this, fill it with water, then add two of the ingredient needed to make the potion. For example, making Awkward Potion requires two nether wart.",
 
   "book.hexerei.items_coffer_1.passage_1": "Coffer",
-  "book.hexerei.items_coffer_1.passage_2": "  The Coffer is a very useful storage device for witches, especially thoae who have crow familiars.",
+  "book.hexerei.items_coffer_1.passage_2": "  The Coffer is a very useful storage device for witches, especially those who have crow familiars.",
   "book.hexerei.items_coffer_2.passage_1": "  To craft you need a Mixing Cauldron and the items shown below.",
   "book.hexerei.items_coffer_3.passage_1": "  Coffers can also be dyed with any color and be renamed to change their colors in a loop.",
   "book.hexerei.items_coffer_3.passage_2": "  Once dyed, if not named, they can be dyed again to mix the dye colors like leather armor.",
