--- a/src/main/resources/assets/hexerei/lang/zh_cn.json
+++ b/src/main/resources/assets/hexerei/lang/zh_cn.json
@@ -616,7 +616,7 @@
   "book.hexerei.entities_broom_page_9.passage_1": "  配件：\n   杂项：\n   挎包：\n   扫帚尾：\n 若要装备，则将每件物品放至其对应的扫帚空槽内即可。",
   "book.hexerei.structures_index_page_1.passage_1": "- 结构 -",
   "book.hexerei.structures_index_page_1.passage_2": "    各个结构星罗棋布于世界各处，那里是巫师锻炼自己本领的地方。本章的页面将介绍如何寻找这些地方，以及它们的用途、",
-  "book.hexerei.structures_index_page_2.passage_1": "结构索引",
+  "book.hexerei.structures_index_page_2.passage_1": "结构目录",
   "book.hexerei.structures_index_page_2.passage_2": "",
   "book.hexerei.structures_witch_hut_page_1.passage_1": "巫师小屋",
   "book.hexerei.structures_witch_hut_page_1.passage_2": "  在沼泽中，你可能会遇到本模组的各种各样的巫师小屋。这些小屋居住着许多的巫师，放置有各种各样的工具。",
